Findbugs: A stab at squashing some issues across the board. Probably more to follow.